--- a/CD220Labs/expressjs/package.json
+++ b/CD220Labs/expressjs/package.json
@@ -4,19 +4,22 @@
   "description": "",
   "main": "expressServer.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon expressAppLevelMiddleware"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.22"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^8.6.0",
     "express": "^4.18.2",
     "express-react-views": "^0.11.0",
+    "express-session": "^1.18.0",
     "ibm-watson": "^7.1.2",
+    "jsonwebtoken": "^9.0.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0"
   }
